添加了代码判断功能
