# service/submit.go
@@ -1,12 +1,20 @@
 package service
 
 import (
+	"bytes"
 	"gin_gorm_o/define"
+	"gin_gorm_o/helper"
 	"gin_gorm_o/models"
 	"github.com/gin-gonic/gin"
+	"io"
+	"io/ioutil"
 	"log"
 	"net/http"
+	"os/exec"
+	"runtime"
 	"strconv"
+	"sync"
+	"time"
 )
 
 // GetProoblemDetail
@@ -55,4 +63,161 @@ func GetSubmitList(c *gin.Context) {
 			"data":             data,
 		},
 	})
+}
+
+// SubmitCode
+// @Tags 用户私有方法
+// @Summary 提交代码
+// @Param authorization header string true "token"
+// @Param problem_identity query string true "problem_identity"
+// @Param code body string true "code"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /user/submit-code [post]
+func SubmitCode(c *gin.Context) {
+	problemIdentity := c.Query("problem_identity")
+	code, err := ioutil.ReadAll(c.Request.Body)
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Read Code Error:" + err.Error(),
+		})
+		return
+	}
+
+	//代码保存
+	path, err := helper.CodeSave(code)
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Save Code Error:" + err.Error(),
+		})
+		return
+	}
+
+	u, exists := c.Get("user")
+	if !exists {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get User from from request body Error",
+		})
+		return
+	}
+	userClaim := u.(*helper.UserClaims) //类型强转为UserClaims
+
+	//生成一个submit_basic并插入
+	submitBasic := &models.SubmitBasic{
+		Identity:        helper.GetUUID(),
+		ProblemIdentity: problemIdentity,
+		UserIdentity:    userClaim.Identity,
+		Path:            path,
+	}
+
+	//判断代码的正确性，返回WA,OOM等信息
+	//首先查询这个problem对应的basic
+	problemBasic := new(models.ProblemBasic)
+	err = models.DB.Where("identity = ?", problemIdentity).Preload("TestCases").First(problemBasic).Error
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get Problem Basic Error:" + err.Error(),
+		})
+		return
+	}
+	//遍历测试用例并执行
+	WA := make(chan int)
+	OOM := make(chan int)
+	CE := make(chan int)
+	passCount := 0
+	//提示执行结果
+	var msg string
+	var lock sync.Mutex
+
+	for _, testCase := range problemBasic.TestCases {
+		testCase := testCase
+		go func() {
+			//执行测试
+			cmd := exec.Command("go", "run", path)
+			var out, stderr bytes.Buffer
+
+			cmd.Stderr = &stderr
+			cmd.Stdout = &out
+			stdinPipe, err := cmd.StdinPipe()
+			if err != nil {
+				log.Fatalln(err)
+			}
+
+			io.WriteString(stdinPipe, testCase.Input)
+			//运行给定的code，比对拿到的输出结果和正确的输出结果
+			var beginMem runtime.MemStats
+			runtime.ReadMemStats(&beginMem) //记录运行前的内存状态
+			err = cmd.Run()
+			if err != nil {
+				log.Println(err, stderr.String())
+				if err.Error() == "exit status 2" {
+					CE <- 1
+					msg = stderr.String()
+					return
+				}
+			}
+
+			var endMem runtime.MemStats
+			runtime.ReadMemStats(&endMem) //记录运行后的内存状态
+
+			//答案错误
+			log.Println("程序输出为: ", out.String())
+			if testCase.Output != out.String() {
+
+				WA <- 1
+				msg = "答案错误"
+				return
+			}
+			//运行超内存
+			log.Println("运行所需内存为: ", endMem.Alloc/1024-(beginMem.Alloc/1024))
+			if endMem.Alloc/1024-(beginMem.Alloc/1024) > uint64(problemBasic.MaxMem) {
+				OOM <- 1
+				msg = "运行超内存"
+				return
+			}
+
+			lock.Lock()
+			passCount++
+			log.Println("通过的测试案例数：", passCount)
+			lock.Unlock()
+		}()
+	}
+	//-1-待判断；1-答案正确；2-答案错误；3-运行超时；4-运行超内存;5-编译错误
+	select {
+	case <-WA:
+		submitBasic.Status = 2
+	case <-OOM:
+		submitBasic.Status = 4
+	case <-CE:
+		submitBasic.Status = 5
+	case <-time.After(time.Millisecond * time.Duration(problemBasic.MaxRuntime)):
+		if passCount == len(problemBasic.TestCases) {
+			submitBasic.Status = 1
+			msg = "答案正确"
+		} else {
+			submitBasic.Status = 3
+			msg = "运行超时"
+		}
+	}
+
+	err = models.DB.Create(submitBasic).Error
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Create Submit Basic Error:" + err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": "200",
+		"data": map[string]interface{}{
+			"status": submitBasic.Status,
+			"msg":    msg,
+		},
+	})
+
 }
